--- a/GroceryGame/Base.lproj/Main.storyboard
+++ b/GroceryGame/Base.lproj/Main.storyboard
@@ -101,6 +101,9 @@
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="33.5" id="cFa-wH-q22"/>
                                                     </constraints>
                                                     <state key="normal" title="Edit Icon" image="editIcon"/>
+                                                    <connections>
+                                                        <segue destination="hWc-1X-TlE" kind="show" identifier="EditList" id="rlw-GP-8bu"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMj-sR-KnZ">
                                                     <rect key="frame" x="41.5" y="0.0" width="33.5" height="33.5"/>
@@ -126,7 +129,6 @@
                                     <outlet property="editButton" destination="X3S-Zh-hRn" id="hS3-Qe-GoH"/>
                                     <outlet property="nameLabel" destination="rRi-dg-xko" id="yWg-hK-NLF"/>
                                     <outlet property="trashButton" destination="vMj-sR-KnZ" id="u29-I2-gvl"/>
-                                    <segue destination="hWc-1X-TlE" kind="show" identifier="EditList" id="Fgb-nt-EcQ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -441,6 +443,6 @@
         <image name="trashcan" width="344" height="367"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fgb-nt-EcQ"/>
+        <segue reference="rlw-GP-8bu"/>
     </inferredMetricsTieBreakers>
 </document>
