Starting view to get items

--- a/GroceryGame/playstory.storyboard
+++ b/GroceryGame/playstory.storyboard
@@ -170,7 +170,7 @@
         <!--View Controller-->
         <scene sceneID="YTp-91-jyJ">
             <objects>
-                <viewController id="Age-oq-SwW" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="getItemPage" id="Age-oq-SwW" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MXF-VN-VMn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -223,7 +223,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hRI-rz-PZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="320.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="380" y="134"/>
         </scene>
     </scenes>
     <resources>
